--- a/Salaryexperiencefile.ipynb
+++ b/Salaryexperiencefile.ipynb
@@ -2,18 +2,280 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>work_year</th>\n",
+       "      <th>experience_level</th>\n",
+       "      <th>employment_type</th>\n",
+       "      <th>job_title</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>salary_currency</th>\n",
+       "      <th>salary_in_usd</th>\n",
+       "      <th>employee_residence</th>\n",
+       "      <th>remote_ratio</th>\n",
+       "      <th>company_location</th>\n",
+       "      <th>company_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Business Data Analyst</td>\n",
+       "      <td>65000</td>\n",
+       "      <td>GBP</td>\n",
+       "      <td>79976</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>100</td>\n",
+       "      <td>GI</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Business Intelligence Analyst</td>\n",
+       "      <td>115600</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>115600</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Business Intelligence Analyst</td>\n",
+       "      <td>79700</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>79700</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>EN</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Applied Scientist</td>\n",
+       "      <td>281700</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>281700</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>EN</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Applied Scientist</td>\n",
+       "      <td>141100</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>141100</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0</td>\n",
+       "      <td>US</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8265</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>412000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>412000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>100</td>\n",
+       "      <td>US</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8266</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Principal Data Scientist</td>\n",
+       "      <td>151000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>151000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>100</td>\n",
+       "      <td>US</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8267</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>EN</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>105000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>105000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>100</td>\n",
+       "      <td>US</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8268</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>EN</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>Business Data Analyst</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>100</td>\n",
+       "      <td>US</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8269</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Science Manager</td>\n",
+       "      <td>7000000</td>\n",
+       "      <td>INR</td>\n",
+       "      <td>94665</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>50</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8270 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      work_year experience_level employment_type  \\\n",
+       "0          2023               SE              FT   \n",
+       "1          2023               SE              FT   \n",
+       "2          2023               SE              FT   \n",
+       "3          2023               EN              FT   \n",
+       "4          2023               EN              FT   \n",
+       "...         ...              ...             ...   \n",
+       "8265       2020               SE              FT   \n",
+       "8266       2021               MI              FT   \n",
+       "8267       2020               EN              FT   \n",
+       "8268       2020               EN              CT   \n",
+       "8269       2021               SE              FT   \n",
+       "\n",
+       "                          job_title   salary salary_currency  salary_in_usd  \\\n",
+       "0             Business Data Analyst    65000             GBP          79976   \n",
+       "1     Business Intelligence Analyst   115600             USD         115600   \n",
+       "2     Business Intelligence Analyst    79700             USD          79700   \n",
+       "3                 Applied Scientist   281700             USD         281700   \n",
+       "4                 Applied Scientist   141100             USD         141100   \n",
+       "...                             ...      ...             ...            ...   \n",
+       "8265                 Data Scientist   412000             USD         412000   \n",
+       "8266       Principal Data Scientist   151000             USD         151000   \n",
+       "8267                 Data Scientist   105000             USD         105000   \n",
+       "8268          Business Data Analyst   100000             USD         100000   \n",
+       "8269           Data Science Manager  7000000             INR          94665   \n",
+       "\n",
+       "     employee_residence  remote_ratio company_location company_size  \n",
+       "0                    ES           100               GI            L  \n",
+       "1                    US             0               US            M  \n",
+       "2                    US             0               US            M  \n",
+       "3                    US             0               US            M  \n",
+       "4                    US             0               US            M  \n",
+       "...                 ...           ...              ...          ...  \n",
+       "8265                 US           100               US            L  \n",
+       "8266                 US           100               US            L  \n",
+       "8267                 US           100               US            S  \n",
+       "8268                 US           100               US            L  \n",
+       "8269                 IN            50               IN            L  \n",
+       "\n",
+       "[8270 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import scipy.stats as st\n",
+    "from scipy import stats\n",
+    "import numpy as np\n",
+    "\n",
+    "Salary_Data = pd.read_csv(\"DataScienceSalary.csv\")\n",
+    "Salary_Data"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
