--- a/Salaryexperiencefile.ipynb
+++ b/Salaryexperiencefile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[8270 rows x 11 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,8 +254,34 @@
     "from scipy import stats\n",
     "import numpy as np\n",
     "\n",
-    "Salary_Data = pd.read_csv(\"DataScienceSalary.csv\")\n",
-    "Salary_Data"
+    "Salary_Data_df = pd.read_csv(\"DataScienceSalary.csv\")\n",
+    "Salary_Data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "work_year\n",
+       "2020    102250.866667\n",
+       "2021     99922.073394\n",
+       "2022    134508.234545\n",
+       "2023    155481.248301\n",
+       "Name: salary_in_usd, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Salary_by_year = Salary_Data_df.groupby([\"work_year\"])[\"salary_in_usd\"].mean()\n",
+    "Salary_by_year"
    ]
   }
  ],
