Dataframe for Salary by year

--- a/Salaryexperiencefile.ipynb
+++ b/Salaryexperiencefile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[8270 rows x 11 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -274,14 +274,122 @@
        "Name: salary_in_usd, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Salary_by_year = Salary_Data_df.groupby([\"work_year\"])[\"salary_in_usd\"].mean()\n",
-    "Salary_by_year"
+    "# Salary Avg. by year\n",
+    "Salary_by_year_average = Salary_Data_df.groupby([\"work_year\"])[\"salary_in_usd\"].mean()\n",
+    "Salary_by_year_average\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "work_year\n",
+       "2020      75\n",
+       "2021     218\n",
+       "2022    1650\n",
+       "2023    6327\n",
+       "Name: salary_in_usd, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count of salaries by year\n",
+    "Salary_by_year_count = Salary_Data_df.groupby([\"work_year\"])[\"salary_in_usd\"].count()\n",
+    "Salary_by_year_count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary_in_usd_x</th>\n",
+       "      <th>salary_in_usd_y</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>work_year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020</th>\n",
+       "      <td>102250.866667</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>99922.073394</td>\n",
+       "      <td>218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>134508.234545</td>\n",
+       "      <td>1650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023</th>\n",
+       "      <td>155481.248301</td>\n",
+       "      <td>6327</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           salary_in_usd_x  salary_in_usd_y\n",
+       "work_year                                  \n",
+       "2020         102250.866667               75\n",
+       "2021          99922.073394              218\n",
+       "2022         134508.234545             1650\n",
+       "2023         155481.248301             6327"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#combine and exclude 2020 due to low sample size\n",
+    "Table_for_plot = pd.merge(Salary_by_year_average, Salary_by_year_count, on=[\"work_year\"])\n",
+    "Table_for_plot"
    ]
   }
  ],
