Adding HTML results

--- a/Salary_Stats_and_Maps.ipynb
+++ b/Salary_Stats_and_Maps.ipynb
@@ -2782,6 +2782,24 @@
    "source": [
     "average_salary_all_jobs.hvplot(c=\"salary_in_usd\",global_extent=True, frame_height=600, tiles=True, hover_cols=[\"country_name\", \"pop_est\", \"average_salary\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:bokeh.core.validation.check:W-1005 (FIXED_SIZING_MODE): 'fixed' sizing mode requires width and height to be set: figure(id='p2199', ...)\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot = average_salary_all_jobs.hvplot(c=\"salary_in_usd\",global_extent=True, frame_height=600, tiles=True, hover_cols=[\"country_name\", \"pop_est\", \"average_salary\"])\n",
+    "hvplot.save(plot, 'Images/Average_Salary_All_Jobs.html')"
+   ]
   }
  ],
  "metadata": {
