Saving Figs in folder

--- a/Salaryexperiencefile.ipynb
+++ b/Salaryexperiencefile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[8128 rows x 11 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "Name: salary_in_usd, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "3       2023   6185"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "3       2023         155559   6185"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -452,16 +452,26 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "Salary_by_year_average.plot(title=\"Average Salary by Year\", xlabel=\"Year\", ylabel=\"Average Salary\")\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "plt.savefig(\"images/Fig6.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +485,7 @@
        "Name: salary_in_usd, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +514,8 @@
    ],
    "source": [
     "Salary_by_level_average.plot.bar(title=\"Average Salary by Experience Level\", xlabel=\"Year\", ylabel=\"Average Salary\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.savefig(\"Images/Fig7.png\")"
    ]
   }
  ],
